	* FileGlob.cc, FileSet.cc, FileSet.h, MirrorJob.cc, NetAccess.cc,
	  mgetJob.cc, mgetJob.h, rmJob.cc: use xstring in FileInfo.
	* xstring.cc: support overlapping set.
	* xstring.h: add compact variant of xstring (xstring_c).
	* Resolver.cc, Resolver.h: use xstring_c in cache.
	* xstring.h: add xstring_c::truncate.
	* xmalloc.cc: allow overlapped xstrset.

2007-03-28  Alexander V. Lukyanov <lav@yars.free.net>

	* SleepJob.cc, SleepJob.h: use xstring.
	* xstring.cc, xstring.h: add len member; support binary strings.
	* SFtp.cc, SFtp.h: use xstring.
	* Resolver.cc, Resolver.h: use xstring.

2007-03-26  Alexander V. Lukyanov <lav@yars.free.net>

	* LocalAccess.cc: prevent double-delete of args in LocalDirList
	  (reported by Liu Yubao <yubao.liu@gmail.com>).
	* FileAccess.cc, commands.cc: cosmetics.
	* pgetJob.cc: fixed core dump when target directory is not writable
	  (reported by Justin Piszcz <jpiszcz@lucidpixels.com>).

2007-03-26  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc, Job.cc, Job.h, MirrorJob.cc, SleepJob.cc, commands.cc,
	  mgetJob.cc, pgetJob.cc: use xstring for cmdline.

2007-03-23  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc, Fish.h: use StringSet for path_queue.
	* StringSet.cc, StringSet.h: (LastString, Pop) new methods.
	* NetRC.cc, NetRC.h: use xstring.
	* commands.cc: fixes for xstring in NetRC.
	* pgetJob.cc, pgetJob.h: use xstring.

2007-03-13  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: change line to xstring; drop line_len;
	  improve <NUL> handling; require <CR><NL> to end line.

2007-03-13  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc, xstring.h, Makefile.am, xmalloc.h: split off xstring.
	* FileAccess.cc, FileAccess.h, Fish.cc, Fish.h, Http.cc, Http.h,
	  LocalAccess.cc, NetAccess.cc, NetAccess.h, SFtp.cc, ftpclass.cc,
	  ftpclass.h: use xstring.

2007-03-09  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.h: don't delete the object in ListDel.
